--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MongoDB_URI =mongodb+srv://issaclo:5b6b1818@cluster0.d1xfe.mongodb.net/warehouse?retryWrites=true&w=majority
+MongoDB_URI =mongodb+srv://issaclo:t3q1nmLtNBePCCPy@cluster0.d1xfe.mongodb.net/warehouse?retryWrites=true&w=majority
 
 MongoDB_DB=todo
